# tinyxml2-wrapper

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Xml.h  catch.h  run_doxy  test.cpp
docs/doxygen/: Doxyfile
docs/doxygen/html/: _xml_8h_source.html  annotated.html  classeng_1_1_xml-members.html  classeng_1_1_xml.html  classeng_1_1_xml_element-members.html  classeng_1_1_xml_element.html  classes.html  files.html  functions.html  functions_func.html
docs/doxygen/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  searchdata.js
docs/doxygen/latex/: annotated.tex  classeng_1_1_xml.tex  classeng_1_1_xml_element.tex  refman.tex
testfiles/: test1.xml  test2.xml
